--- a/shapes/styles.css
+++ b/shapes/styles.css
@@ -62,6 +62,13 @@ footer a:hover {
 
 /* Headings */
 
+#coins-display {
+  position: fixed;
+  top: 2%;
+  margin-left: 30%;
+  color: white;
+}
+
 #main-header {
   margin-left: 13%;
 }
@@ -220,9 +227,30 @@ h1#high-scores {
 
 /* Shop */
 
+#purchase-notification {
+  visibility: hidden;             /* This prevents the flashing effect */
+  min-height: 40px;
+  background: darkgreen;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px 4px;
+  width: 70%;
+  margin: 0 auto;
+}
+
+#shop-table {
+  margin: 0 auto 4% auto;
+}
+
 #shop-table th{
   text-indent: 2%;
   padding: 2% 0;
+  background: orange;
+}
+
+#shop-table tbody tr {
+  background: antiquewhite;
 }
 
 /* Related */
@@ -233,7 +261,7 @@ h1#high-scores {
 }
 
 #fun { color: red; }
-#math { color:darkorange; }
+#math { color: darkorange; }
 #game { color: gold; }
 #snake { color: magenta; }
 #online { color: chartreuse; }
